# rodin

./: .gitignore  README.md  claude-progress.txt  feature_list.json  init.sh  pyproject.toml  setup_app.py
.github/workflows/: release.yml
docs/: README.md  cli.md  configuration.md  development.md  features.md  installation.md  quickstart.md
src/rodin/: __init__.py  audio_queue.py  config.py  main.py  snippets.py  sounds.py  stats.py  transcriber.py  typer.py  voice_commands.py
src/rodin/ui/: __init__.py  app.py  menubar.py  overlay.py  overlay_win.py
src/whisper_flow/: app_context.py  config.py  dictionary.py  hotkey.py  main.py  transcriber.py
src/whisper_flow/ui/: overlay.py  overlay_win.py
