[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rodin"
version = "0.1.0"
description = "Local voice dictation with AI editing - 100% offline, open source"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "James Dowzard" }
]
keywords = ["voice", "dictation", "whisper", "transcription", "speech-to-text", "offline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
    "rumps>=0.4.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "pystray>=0.19.0; sys_platform == 'win32'",
    "pillow>=10.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "py2app>=0.28.0; sys_platform == 'darwin'",
]
ollama = [
    "ollama>=0.1.0",
]

[project.scripts]
rodin = "rodin.main:main"

[project.gui-scripts]
rodin-app = "rodin.main:main"

[project.urls]
Homepage = "https://github.com/jamesdowzard/rodin"
Repository = "https://github.com/jamesdowzard/rodin"

[tool.hatch.build.targets.wheel]
packages = ["src/rodin"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
